Fontfamily setup, css variable setup and header footer desktop view layout setup

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,85 @@
+@font-face {
+  font-family: 'Satoshi Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Satoshi Regular'), url('./fonts/Satoshi-Regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Satoshi Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Satoshi Italic'), url('./fonts/Satoshi-Italic.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Satoshi Light';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Satoshi Light'), url('./fonts/Satoshi-Light.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Satoshi Light Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Satoshi Light Italic'), url('./fonts/Satoshi-LightItalic.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Satoshi Medium';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Satoshi Medium'), url('./fonts/Satoshi-Medium.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Satoshi Medium Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Satoshi Medium Italic'), url('./fonts/Satoshi-MediumItalic.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Satoshi Bold';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Satoshi Bold'), url('./fonts/Satoshi-Bold.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Satoshi Bold Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Satoshi Bold Italic'), url('./fonts/Satoshi-BoldItalic.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Satoshi Black';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Satoshi Black'), url('./fonts/Satoshi-Black.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Satoshi Black Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Satoshi Black Italic'), url('./fonts/Satoshi-BlackItalic.woff') format('woff');
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --color-foreground:0,0,0;
+  --page-width:160rem;
+  --font-heading-family:'Satoshi Regular', sans-serif;;
+  --font-heading-style:normal;
+  --font-heading-weight:400;
+  --footer-background:#EDF4FF;
+  --font-heading-scale:1;
+  --font-alber-sans: "Albert Sans";
+  
 }
 
 @media (prefers-color-scheme: dark) {
@@ -12,11 +91,18 @@
 
 html,
 body {
+  box-sizing: border-box;
   max-width: 100vw;
+  height: 100%;
+  font-size:10px;
   overflow-x: hidden;
 }
 
 body {
+  display: grid;
+  grid-template-rows: auto auto 1fr auto;
+  grid-template-columns: 100%;
+  min-height: 100%;
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
@@ -34,9 +120,202 @@ a {
   color: inherit;
   text-decoration: none;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+.h0,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5 {
+  font-family: var(--font-heading-family);
+  font-style: var(--font-heading-style);
+  font-weight: var(--font-heading-weight);
+  letter-spacing: 0.06rem;
+  color: rgb(var(--color-foreground));
+  line-height: 1.3;
+  word-break: break-word;
+}
+.hxxl {
+  font-size: clamp(calc(var(--font-heading-scale) * 5.6rem), 14vw, calc(var(--font-heading-scale) * 7.2rem));
+  line-height: 1.1;
+}
 
+.hxl {
+  font-size: calc(var(--font-heading-scale) * 5rem);
+  line-height: calc(1 + 0.3 / max(1, var(--font-heading-scale)));
+}
+
+@media only screen and (min-width: 750px) {
+  .hxl {
+    font-size: calc(var(--font-heading-scale) * 6.2rem);
+  }
+}
+
+.h0 {
+  font-size: calc(var(--font-heading-scale) * 4rem);
+}
+
+@media only screen and (min-width: 750px) {
+  .h0 {
+    font-size: calc(var(--font-heading-scale) * 5.2rem);
+  }
+}
+
+h1,
+.h1 {
+  font-size: calc(var(--font-heading-scale) * 3rem);
+}
+
+@media only screen and (min-width: 750px) {
+  h1,
+  .h1 {
+    font-size: calc(var(--font-heading-scale) * 4rem);
+  }
+}
+
+h2,
+.h2 {
+  font-size: calc(var(--font-heading-scale) * 2rem);
+}
+
+@media only screen and (min-width: 750px) {
+  h2,
+  .h2 {
+    font-size: calc(var(--font-heading-scale) * 2.5rem);
+  }
+}
+
+h3,
+.h3 {
+  font-size: calc(var(--font-heading-scale) * 1.7rem);
+}
+
+@media only screen and (min-width: 750px) {
+  h3,
+  .h3 {
+    font-size: calc(var(--font-heading-scale) * 1.8rem);
+  }
+}
+
+h4,
+.h4 {
+  font-family: var(--font-heading-family);
+  font-style: var(--font-heading-style);
+  font-size: calc(var(--font-heading-scale) * 1.5rem);
+}
+
+h5,
+.h5 {
+  font-size: calc(var(--font-heading-scale) * 1.2rem);
+}
+
+@media only screen and (min-width: 750px) {
+  h5,
+  .h5 {
+    font-size: calc(var(--font-heading-scale) * 1.3rem);
+  }
+}
+
+h6,
+.h6 {
+  color: rgba(var(--color-foreground), 0.75);
+  margin-block-start: 1.67em;
+  margin-block-end: 1.67em;
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
+}
+main#MainContent {
+  min-height: 40vh;
+}
+.link--text:hover span {
+  text-decoration: underline;
+}
+
+/* header */
+.page-width{
+  max-width: var(--page-width);
+  margin:0 auto;
+  padding:0 3rem;
+  width: 100%;
+}
+.header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+.list-menu--inline {
+  display: inline-flex;
+  flex-wrap: wrap;
+}
+
+
+.list-menu {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.list-menu__item {
+  display: flex;
+  align-items: center;
+  font-family: var(--font-heading-family);
+  line-height: 1.33;
+  font-size: 2.4rem;
+  font-weight: 500;
+}
+.header__menu-item {
+  padding: 1.2rem 2.3rem;
+  text-decoration: none;
+  color: rgba(var(--color-foreground), 1);
+}
+.header__heading-logo-wrapper {
+  max-width: 207px;
+}
+
+.footer-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  
+}
+.section-footer{
+  background: var(--footer-background);
+}
+.footer-grid-item {
+  flex: 0 0 25%;
+  max-width: 25%;
+}
+.brand-logo {
+  max-width: 222px;
+}
+.list-unstyled {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.footer .list-menu__item{
+  font-family: var(--font-alber-sans);
+}
+.footer-menu-heading {
+    font-weight: 600;
+    display: inline-block;
+    border-bottom: 3.26px solid #5A42E2;
+    padding-bottom: 6.26px;
+}
+.footer-block__details-content {
+  margin-top: 4rem;
+}
+.footer-block__details-content li {
+  margin-bottom: 13.27px;
+}
+.top-footer-header {
+  padding: 7rem 0;
 }
