--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,6 +79,8 @@
   --footer-background:#EDF4FF;
   --font-heading-scale:1;
   --font-alber-sans: "Albert Sans";
+  --color-button:0,0,0;
+  --color-button-text:255,255,255;
   
 }
 
@@ -89,23 +91,29 @@
   }
 }
 
-html,
-body {
+html {
   box-sizing: border-box;
   max-width: 100vw;
   height: 100%;
   font-size:10px;
   overflow-x: hidden;
 }
+body {
+  max-width: 100vw;
+  height: 100%;
+}
 
 body {
   display: grid;
+  box-sizing: border-box;
   grid-template-rows: auto auto 1fr auto;
   grid-template-columns: 100%;
   min-height: 100%;
-  color: var(--foreground);
+  color: var(--color-foreground);
+  line-height: 1.6;
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
+  font-family: var(--font-alber-sans);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -114,6 +122,11 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+@media screen and (min-width: 750px) {
+  body {
+      font-size: 2rem;
+  }
 }
 
 a {
@@ -151,7 +164,7 @@ h5,
 
 @media only screen and (min-width: 750px) {
   .hxl {
-    font-size: calc(var(--font-heading-scale) * 6.2rem);
+    font-size: calc(var(--font-heading-scale) * 6.5rem);
   }
 }
 
@@ -173,7 +186,7 @@ h1,
 @media only screen and (min-width: 750px) {
   h1,
   .h1 {
-    font-size: calc(var(--font-heading-scale) * 4rem);
+    font-size: calc(var(--font-heading-scale) * 4.5rem);
   }
 }
 
@@ -226,18 +239,54 @@ h6,
   margin-block-start: 1.67em;
   margin-block-end: 1.67em;
 }
+
+.button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border: 0;
+  padding: 1.4rem 3.5rem;
+  cursor: pointer;
+  font: inherit;
+  font-size: 2.1rem;
+  line-height: 1.333;
+  text-decoration: none;
+  color: rgb(var(--color-button-text));
+  transition: box-shadow var(--duration-short) ease;
+  -webkit-appearance: none;
+  appearance: none;
+  border-radius: 58px;
+  font-family: var(--font-heading-family);
+  background-color: rgba(var(--color-button));
+}
+svg.aerrow-svg {
+  width: 2.4rem;
+  height: 2.4rem;
+  margin-left: 1.2rem;
+  transition: 0.3s;
+}
+.button:hover svg {
+  transform: translate(20%, 0);
+  transition: all 0.3s ease-in-out;
+}    
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
 }
-main#MainContent {
-  min-height: 40vh;
-}
+
 .link--text:hover span {
   text-decoration: underline;
 }
-
+.left{
+  text-align: left;
+}
+.center{
+  text-align: center;
+}
+.right{
+  text-align: right;
+}
 /* header */
 .page-width{
   max-width: var(--page-width);
@@ -318,4 +367,73 @@ main#MainContent {
 }
 .top-footer-header {
   padding: 7rem 0;
+}
+.section-row{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.index-hero-banner .section-content {
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+
+.index-hero-banner .section-image {
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+
+.main-section-hero {
+  background-color: #EDF4FF;
+}
+.section-content h2 {
+  font-weight: 700;
+}
+
+.blue-text {
+  color: #5A42E2;
+}
+.index-hero-banner .section-content-inner {
+  margin-right: -29%;
+}
+.index-hero-banner .section-row{
+  align-items: center;
+}
+.index-hero-banner p {
+  max-width: 704px;
+}
+.hero-heading{
+  margin-bottom:3.8rem ;
+}
+.hero-action-buttons {
+  margin-top: 4rem;
+}
+.index-hero-banner .section-image {
+  padding-top: 10.5rem;
+}
+.global-count-inner {
+  background-color: #EDF4FF;
+}
+.global-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 1260px;
+  margin: 0 auto;
+  padding: 40px;
+}
+.global-count-section {
+  padding: 3rem 0;
+}
+.count-column {
+  text-align: center;
+}
+.count-column h2 {
+  font-size: 5.4rem;
+  font-weight: 700;
+  text-shadow: 2.12px 2.12px #00000040;
+}
+.count-column h5 {
+  font-size: 1.8rem;
+  font-weight: 600;
 }
