--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -237,7 +237,7 @@ h6,
   font-family: var(--font-heading-family);
   background-color: rgba(var(--color-button));
 }
-svg.aerrow-svg {
+.button .aerrow-svg {
   width: 2.4rem;
   height: 2.4rem;
   margin-left: 1.2rem;
@@ -264,15 +264,17 @@ svg.aerrow-svg {
     color-scheme: dark;
   }
 }
-.header-menu-open{
+.header-menu-container{
   display: none;
 }
 .header-icons{
   display: none;
 }
-.header-menu-open svg {
+.header-menu-container svg {
   width: 2.8rem;
+  height: auto;
   display: block;
+  color: #5A42E2;
 }
 .header-menu-drawer {
   position: fixed;
@@ -295,7 +297,7 @@ svg.aerrow-svg {
   border-bottom: 1px solid #000;
 }
 .header-drawer-header .header__heading-link {
-  max-width: 200px;
+  max-width: 140px;
 }
 .page-not-found {
   min-height: 26vh;
@@ -313,6 +315,7 @@ svg.aerrow-svg {
   display: block;
 }
 .header-drawer-header .close-icon {
+  color: #5A42E2;
   flex: 0 0 25px;
   max-width: 25px;
   background: none;
@@ -488,328 +491,7 @@ svg.aerrow-svg {
   width: 100%;
   height: 100%;
 }
-.section-row{
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.index-hero-banner .section-content {
-  flex: 0 0 50%;
-  max-width: 50%;
-}
-
-.index-hero-banner .section-image {
-  flex: 0 0 50%;
-  max-width: 50%;
-}
-
-.main-section-hero {
-  background-color: #EDF4FF;
-}
-.section-content h2 {
-  font-weight: 700;
-}
-
-.blue-text {
-  color: #5A42E2;
-}
-.index-hero-banner .section-content-inner {
-  margin-right: -29%;
-}
-.index-hero-banner .section-row{
-  align-items: center;
-}
-.index-hero-banner p {
-  max-width: 704px;
-}
-.hero-heading{
-  margin-bottom:3.8rem ;
-}
-.hero-action-buttons {
-  margin-top: 4rem;
-}
-.index-hero-banner .section-image {
-  padding-top: 10.5rem;
-}
-.global-count-inner {
-  background-color: #EDF4FF;
-}
-.global-row {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  max-width: 1260px;
-  margin: 0 auto;
-  padding: 40px;
-}
-.global-count-section {
-  padding: 3rem 0;
-}
-.count-column {
-  text-align: center;
-}
-.count-column h2 {
-  font-size: 5.4rem;
-  font-weight: 700;
-  text-shadow: 2.12px 2.12px #00000040;
-}
-.count-column h5 {
-  font-size: 1.8rem;
-  font-weight: 600;
-}
-.abt-heading {
-  font-size: 35px;
-  font-weight: 900;
-  padding-bottom: 19px;
-  position:relative;
-  display: inline-block;
-}
-.abt-subheading {
-  font-size: 24px;
-  line-height: 1.33;
-  font-weight: 600;
-  margin-top: 3.2rem;
-  color: #5A42E2;
-}
-.section-about {
-  padding: 4.7rem 0;
-}
-.about-description p {
-  font-size: 18px;
-  line-height: 2;
-  max-width: 1292px;
-  margin: 0 auto;
-}
-.about-description {
-  margin-top: 3.6rem;
-}
-.about-action-button .button {
-  font-size: 19px;
-}
-.about-action-button {
-  margin-top: 4.6rem;
-  margin-bottom: 4.6rem;
-}
-.abt-heading:after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 3.79px;
-  background: #FF652F;
-  left: 0;
-  right: 0;
-}
-.index-image-withcontent .iwts-content {
-    flex: 0 0 50%;
-    max-width: 596px;
-    margin: 0 auto;
-    padding: 5rem;
-}
-.iwts-content h2 {
-  font-size: 45px;
-  font-weight: 900;
-}
-.index-image-withcontent .iwts-image {
-  flex: 0 0 50%;
-  max-width: 50%;
-  padding: 0 50px;
-}
-.index-image-withcontent .section-iwts-inner {
-  background: linear-gradient(180deg, #CCFD564D, #E7FFAD4D);
-}
-.itws-description {
-  font-size: 16px;
-  line-height: 2;
-  margin: 5.6rem 0;
-}
-.index-image-withcontent .section-row {
-  align-items: center;
-  justify-content: space-between;
-}
-.iwts-image img {
-  display: block;
-}
-.iwts-action-buttons .button {
-  font-size: 19px;
-  font-weight: 500;
-}
-.index-image-youth .iwts-content {
-  flex: 0 0 50%;
-  max-width: 676px;
-  padding: 62px 0;
-  padding-right: 94px;
-}
-
-.index-image-youth .iwts-image {
-  flex: 0 0 50%;
-  max-width: 737px;
-}
-
-.index-image-youth .section-row {
-  align-items: center;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-}
-
-.index-image-youth .section-iwts-inner {
-  background: linear-gradient(180deg, #A48AFB33, #C8B7FF33);
-}
-.index-image-withcontent,.index-image-youth {
-  margin-bottom: 5.5rem;
-}
-.agenda-block {
-  flex: 0 0 calc(33.33% - (22px * 2)/3);
-  max-width: calc(33.33% - (22px * 2)/3);
-  display: flex;
-}
-
-.agenda-iamge-block {
-  flex: 0 0 50%;
-  max-width: 50%;
-}
-.agenda-description {
-  flex: 0 0 50%;
-  max-width: 50%;
-  display: block;
-  align-content: center;
-  padding: 22px;
-}
-
-.section-company-agenda .section-row {
-  gap: 21px;
-}
-
-.agenda-iamge-block img {
-  height: 100% !important;
-  object-fit: cover;
-}
-.agenda-description h2 {
-  font-size: 27px;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin-bottom:13px;
-}
-.agenda-description p {
-  font-size: 16px;
-  color: #363636;
-}
-.section-future-founder {
-  background: #FBF7F0;
-  padding:7rem 0;
-}
-.section-future-founder  .section-heading {
-  max-width: 810px;
-  margin: 0 auto;
-}
-.section-description {
-  max-width: 1154px;
-  margin: 0 auto;
-  font-size: 16px;
-  padding: 30px 0;
-}
-.section-future-founder .section-heading h2 {
-  font-size: 60px;
-  font-weight: 900;
-}
-.icon-rows {
-  --gap:36px;
-  display: flex;
-  margin-top:5rem;
-  gap: var(--gap);
-}
-p.ic-title {
-  font-size: 20px;
-  font-family: var(--font-heading-family);
-  font-weight: 600;
-  color: #000;
-  margin: 20px 0;
-}
-.icon-block {
-  flex: 0 0 calc(20% - var(--gap)* 4 / 5);
-  max-width: calc(20% - var(--gap)* 4 / 5);
-  background: #FFFFFF;
-  border-radius: 17px;
-  box-shadow: 6px 1px 70px 6px rgba(0, 0, 0, 0.16);
-  padding: 26px;
-  color: #7543FF;
-  text-align: center;
-}
-.background-video-wrapper {
-  padding-top: 30%;
-  position:relative;
-}
-.background-video-wrapper video{
-  position:absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.video-bg-image {
-  position: absolute;
-  inset: 0;
-  z-index: 1;
-}
-.video-bg-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.brand-logo img {
   display: block;
 }
 
-.section-background-video .playVideo {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: transparent;
-  border: none;
-  color: #fff;
-  cursor: pointer;
-  backdrop-filter: blur(6px);
-  border-radius: 50%;
-  overflow: hidden;
-}
-.marquee-container {
-  width: 100%;
-  overflow: hidden; /* Hide overflow */
-  background-color: #f0f0f0;
-  padding: 10px 0;
-  white-space: nowrap; /* Prevent line breaks */
-  display: flex;
-  align-items: center;
-}
-
-.marquee-content {
-  display: inline-block;
-  padding-left: 100%; /* Start off-screen */
-  white-space: nowrap; /* Prevent line breaks */
-  display: flex;
-  gap: 50px; /* Space between items */
-}
-
-.marquee-content span {
-  font-size: 18px;
-  color: #333;
-  padding: 0 50px; /* Padding around each item */
-}
-.marqueeElement img {
-  height: auto;
-  max-width: 100%;
-}
-.marqueeElement {
-  display: inline-flex;
-  align-items: center;
-}
-
-.marqudot {
-  width: 11px;
-  height: 11px;
-  background: #4F515F;
-  border-radius: 50%;
-  margin: 0 3.2rem;
-}
-.section-marqueesection{
-  padding: 7rem 0;
-}
