--- a/src/app/components/sections/Surveysection/surveysection.css
+++ b/src/app/components/sections/Surveysection/surveysection.css
@@ -93,7 +93,7 @@
         font-size: 28px;
     }
     .survey-box h2 {
-        font-size: 22spx;
+        font-size: 22px;
     }
     .survey-box {
         padding: 0 10px;
