header menu icon changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -272,7 +272,7 @@ h6,
 }
 .header-menu-container svg {
   width: 2.8rem;
-  height: auto;
+  height: 2.8rem;
   display: block;
   color: #5A42E2;
 }
