13 OCT HOME page new section added

--- a/src/app/components/sections/ImageWithContent/Imagewithcontent.css
+++ b/src/app/components/sections/ImageWithContent/Imagewithcontent.css
@@ -15,8 +15,8 @@
 
 .index-image-withcontent .iwts-content {
     flex: 0 0 50%;
-    max-width: 596px;
-    margin: 0 auto;
+    max-width: 660px;
+    margin-left: 0;
     padding: 5rem;
 }
 
