--- a/src/app/components/sections/EmpowerEntrepreneur/empowerentrepreneur.css
+++ b/src/app/components/sections/EmpowerEntrepreneur/empowerentrepreneur.css
@@ -2,8 +2,51 @@
     --gap:50px;
     display: flex;
     gap:var(--gap);
+    align-items: center;
+    padding: 60px 80px;
+    background-color: #F0FBF0;
+}
+.section-empower-entrepreneur {
+    padding: 100px 0;
 }
 .sec-image-block,.sec-content-block{
     flex:0 0 calc(50% - var(--gap)/2);
     max-width: calc(50% - var(--gap)/2);
+}
+.sec-ic-sub-title {
+    font-family: 'Satoshi';
+    font-weight: 500;
+    color: #5A42E2;
+}
+.sec-ic-heading {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 1.95;
+}
+.sec-ic-bullet-box h4 {
+    font-weight: 700;
+    font-size: 24px;
+    position:relative;
+}
+
+.sec-ic-bullet-box p {
+    font-size: 18px;
+}
+.sec-ic-bullet-box {
+    padding-left: 40px;
+    margin-bottom: 34px;
+}
+.sec-ic-bulltes {
+    margin-top: 27px;
+}
+.sec-ic-bullet-box h4:before {
+    content: '';
+    width: 5px;
+    height: 5px;
+    position: absolute;
+    border: 5px solid #000;
+    border-radius: 50%;
+    left: -30px;
+    top: 50%;
+    transform: translate(0, -50%);
 }
