--- a/src/app/components/sections/StartJourney/startjourney.css
+++ b/src/app/components/sections/StartJourney/startjourney.css
@@ -20,3 +20,33 @@
 .section-start-journey {
     margin-bottom: 10rem;
 }
+@media screen and (max-width: 1280px) {
+    .start-journey-row {
+        padding: 40px 40px;
+    }
+}
+@media screen and (max-width: 1080px) {
+    .start-journey-row{
+        flex-wrap: wrap;
+        gap:40px;
+    }   
+}
+@media screen and (max-width: 989px) {
+    .section-start-journey {
+        margin-bottom: 3rem;
+    }
+}
+@media screen and (max-width: 480px) {
+    .ssj-content h2 {
+        font-size: 24px;
+    }
+    .start-journey-row {
+        gap:20px;
+    }
+    .ssj-content p{
+        margin-top: 20px;
+    }
+    .start-journey-row {
+        padding: 30px 30px;
+    }
+}
