--- a/src/app/components/sections/Joinwhizangle/joinwhizangle.css
+++ b/src/app/components/sections/Joinwhizangle/joinwhizangle.css
@@ -50,3 +50,54 @@
     font-family: var(--font-heading-family);
     margin-top: 17px;
 }
+@media screen and (max-width: 1280px) {
+    .jwa-list-row{
+        --gap:15px;
+    }
+    .headings-jwa h2{
+        font-size:45px;
+    }
+    .jwa-description {
+        font-size: 22px;
+        max-width: 795px;
+        margin: 25px auto;
+    }
+}
+@media screen and (max-width: 1024px) {
+    .jwa-list-item{
+        padding:15px;
+    }
+}
+@media screen and (max-width: 991px) {
+    .jwa-list-item {
+        flex: 0 0 calc(33.33% - var(--gap)* 2 / 3);
+        max-width: calc(33.33% - var(--gap)* 2 / 3);
+    }
+    .jwa-list-row{
+        justify-content: center;
+    }
+    .section-join-whizangle {
+        margin: 30px 0;
+    }
+}
+@media screen and (max-width: 568px) {
+    .jwa-list-item {
+        flex: 0 0 100%;
+        max-width: 100%;
+        padding:25px;
+    }
+    .jwa-list-row {
+        --gap: 38px;
+        max-width: 320px;
+        margin: 0 auto;
+        margin-top: 30px;
+    }
+    .headings-jwa h2 {
+        font-size: 24px;
+    }
+    .jwa-description {
+        font-size: 16px;
+        max-width: 357px;
+        margin: 15px auto;
+    }
+}
